[package]
name = "avif-proxy"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ravif = { version = "0.8.7", default-features = false }
jpeg-decoder = "0.1.22"
lodepng = "3.4.6"
image = "0.23.14"
rgb = "0.8.27"
imgref = "1.9.1"
async-std = { version = "1.6.0", features = ["attributes"]}
surf = "2.3.1"
tide = "0.16.0"
clap = "3.0.0-beta.5"
anyhow = "1.0.44"
log = "0.4.0"
simplelog = "^0.10.0"